feat: Promote to main (#216)
* feat: Promote to UAT (#209)

[IDP-2177] get initiatives list through MIL

* feat: Release dev (#214)

* [IDP-2177] get initiatives list MIL

* [IDP-2177] modify new API get initiatives list for MIL

* [IDP-2177] fix new API get initiatives list for MIL

* [IDP-2177] fix junit

* [IDP-2177] add junit

* [IDP-2177] modify InitiativeMilDTO fields

* [IDP-2177] fix code smell

* [IDP-2177] fix getInitiativeList through MIL headers

* fix: Added check for initiative endDate in updateInitiativePublishedStatus (#210)

* Added check for initiative endDate in updateInitiativePublishedStatus

* Added check for initiative endDate in updateInitiativePublishedStatus

* refactor exception

* refactor exception

* clean code

---------

Co-authored-by: GiovanaSolorzano <giovanaelvira.solorzanochirieleison@nttdata.com>

* fix: Idp 2243 added period check for initiative status (#212)

* [IDP-2243] added date check on InitiativeModelToDTOMapper and added junit

* [IDP-2243] fix method

* [IDP-2243] added status CLOSED on retrieveInitiativeSummary

* [IDP-2243] added endDate on query

* [IDP-2243] modified retrieveSummary

* [IDP-2243] added method on InitiativeUtils, added boolean and modified toInitiativeDTO method

* [IDP-2243] modified junit

* [IDP-2243] added junit

* [IDP-2243] added junit

* fix: IDP-2196 fix Cve (#211)

* bump version to 1.2.0

* fix: migrating to azure-blob-storage library (#215)

* fix: migrating to azure-blob-storage library

* fix netty version and CVE

* feat: IDP-2229 removing http exception from service (#213)

* IDP-2229 added custom exception

* IDP-2229 updated common package exception

* IDP-2229 updated custom exception

* IDP-2229 Added map new exception

* IDP-2229 updated custom exception

* IDP-2229 added new exception management

* IDP-2229 Updated initiative costants and service

* IDP-2229 Updated test

* IDP-2229 Updated res